<resources>
    <string name="app_name">PROG3210</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="login">Login</string>
    <string name="stored_username">doug</string>
    <string name="stored_password">pass</string>
    <string name="login_incorrect">Incorrect username or password</string>
    <string name="title_activity_util">UtilActivity</string>
    <string name="text_manip">Text to manipulate</string>
    <string name="reverse">Reverse!</string>
    <string name="alphabetize">Alphabetize!</string>
    <string name="manipulate">Manipulate!</string>
    <string name="capitalize">Capitalize?</string>
    <string name="note_text_hint">Type your note here...</string>
    <string name="note_save">Save Note</string>
    <string name="logout">Logout</string>
    <string name="total_amount_label">Total Amount</string>
    <string name="total_amount">Total amount</string>
    <string name="tip_amount">Tip Amount:</string>
    <string name="tip_amount_label">Tip Amount:</string>
    <string name="round_up">Round Up?</string>
    <string name="increase">+</string>
    <string name="decrease">-</string>
    <string name="tip_percent">Tip Percent</string>
    <string name="tip_percent_label">Tip Percent:</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="amount_default">25.00</string>
    <string name="bill_amount_label">Bill Amount:</string>
    <string name="note_delete">Delete Note</string>

    <string name="new_note_notification_title_template">New note: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="new_note_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="contact">Contact</string>
    <string name="cute_pic">Click to see a cute picture!</string>
</resources>
