<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.depp1715.prog3210.TextManipActivity">


    <EditText
        android:id="@+id/txtTextToManipulate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="97dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="63dp"
        android:hint="@string/text_manip"
        android:inputType="text" />

    <RadioGroup
        android:id="@+id/radioManipulationGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtTextToManipulate"
        android:layout_alignStart="@+id/txtTextToManipulate"
        android:layout_below="@+id/txtTextToManipulate"
        android:layout_marginTop="12dp">

        <RadioButton
            android:id="@+id/radioReverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/radioAlphabetize"
            android:layout_alignStart="@+id/radioAlphabetize"
            android:layout_centerVertical="true"
            android:text="@string/reverse" />

        <RadioButton
            android:id="@+id/radioAlphabetize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/radioGroup"
            android:layout_alignStart="@+id/radioGroup"
            android:layout_below="@+id/radioGroup"
            android:layout_marginTop="16dp"
            android:text="@string/alphabetize" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/chkCapitalize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioManipulationGroup"
        android:layout_alignStart="@+id/radioManipulationGroup"
        android:layout_below="@+id/radioManipulationGroup"
        android:layout_marginTop="19dp"
        android:text="@string/capitalize" />

    <Button
        android:id="@+id/btnReverseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtTextToManipulate"
        android:layout_alignStart="@+id/txtTextToManipulate"
        android:layout_below="@+id/chkCapitalize"
        android:layout_centerVertical="true"
        android:text="@string/manipulate" />

</RelativeLayout>
