<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.depp1715.prog3210.EditNoteActivity">


    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/txtEditNoteText"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/note_text_hint"
        android:inputType="textMultiLine" />


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/btnSaveNoteEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:text="@string/note_save" />

        <Button
            android:id="@+id/btnDeleteNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/btnSaveNoteEdit"
            android:text="@string/note_delete" />
    </RelativeLayout>
</RelativeLayout>
