<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.depp1715.prog3210.LoginActivity">


    <EditText
        android:id="@+id/txtUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="64dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/txtPassword"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="120dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/txtUserName"
        android:layout_alignStart="@+id/txtUserName"
        android:layout_marginTop="36dp" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="198dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/txtUserName"
        android:layout_alignLeft="@+id/txtUserName"
        android:layout_alignStart="@+id/txtUserName" />
</RelativeLayout>
